[project]
name = "devops-agent"
version = "0.1.0"
description = "End-to-end AI-powered DevOps and smart sync skill."
authors = [
    { name = "ck", email = "ck@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]